<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/suez_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name_description"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/hint_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:text="@string/hint_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_above="@+id/hint_login"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:textAllCaps="false"
            android:background="@drawable/button_login_style"
            android:fontFamily="@font/suez_one"
            android:text="@string/button_login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="6dp"
            android:textAllCaps="false"
            android:background="@drawable/button_register_style"
            android:fontFamily="@font/suez_one"
            android:text="@string/button_register"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>